--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,17 @@
 			<type>jar</type>
 		</dependency>
 	</dependencies>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <targe>1.7</targe>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
 </project>
